smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits-on-apply.smithy
// Parse error at line 5, column 1 near `apply`: Traits cannot be applied to a `apply` definition
namespace com.foo

@deprecated
apply Foo @deprecated
